news laiter added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 vision and challenges in New Bangladesh.</h3>
             <button class="btn">Explore New Bangladesh</button>
             </div>
-            <div class="hero-img bg-color">
+            <div class="hero-img">
                 <img src="img/hero.png" alt="">
             </div>
         </div>
@@ -147,7 +147,15 @@
             </div>
            </section>
           <!-- six section end -->
-           
+           <!-- seventh section start -->
+            <section class="news-letter">
+                <h2 class="title-color-and-font-size">Subscribe Newsletter</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            <input type="email" placeholder="Enter your email here">
+            <input type="submit"  value="Subscribe" name="" id=""><br>
+            <small>We promise not to spam you!</small>
+            </section>
+           <!-- seventh section end -->
         
     </main>
     <footer>
