--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <!-- six section end -->
            <!-- seventh section start -->
             <section class="news-letter">
-                <h2 class="title-color-and-font-size">Subscribe Newsletter</h2>
+            <h2 class="title-color-and-font-size">Subscribe Newsletter</h2>
             <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
             <input type="email" placeholder="Enter your email here">
             <input type="submit"  value="Subscribe" name="" id=""><br>
@@ -159,7 +159,12 @@
         
     </main>
     <footer>
-
+        <h2 class="title-color-and-font-size">Bangladesh 2.0</h2>
+        <div class="footer-icon">
+            <a href="#"><img src="img/facebook.png" alt=""></a>
+            <a href="#"><img src="img/instagram.png" alt=""></a>
+            <a href="#"><img src="img/x.png" alt=""></a>
+        </div>
     </footer>
 </body>
 </html>
