qoutation section added

--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
             </div>
          </section>
         <!-- second section end -->
+         <!-- therd section start  -->
+          <section>
+            <div class="quotation-box">
+                <p>Today, I stand before you to share a vision—a vision for a world where poverty is a relic of the past, where every human being has the opportunity to live a life of dignity, and where capitalism serves humanity, not the other way around.
+
+                    For decades, the world has been driven by an economic system that prioritizes profits over people. This has led to extreme inequality, environmental degradation, and a sense of hopelessness for millions. But I believe we have the power to change this. The problem is not with capitalism itself but with how we have structured it. We must rethink the very foundation of our economic systems to ensure that they work for everyone, not just a privileged few.
+                    
+                    </p>
+                <h4> Dr. Muhammad Yunus </h4>
+                <small> Chief Adviser of the People's Republic of Bangladesh </small>
+            </div>
+          </section>
+         <!-- therd section end  -->
          <!-- fifth section start  -->
           <section>
             <h2 class="title-color-and-font-size">Recent News</h2>
@@ -138,7 +151,7 @@
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
                 <div class="donation-box">
                     <h3>100 taka</h3>
-                    <h3>200 taka</h3>
+                    <h3 style="  background-color: #C6E4D6;">200 taka</h3>
                     <h3>500 taka</h3>
                     <h3>1000 taka</h3>
                 </div>
