changed the font

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
         <div class="hero-area">
             <div class="hero-text ">
-                <p>Bangladesh 2.0</p>
+                <p style="font-weight: bold; color: rgba(0, 0, 0, 0.607);"  >Bangladesh 2.0</p>
                 <h3>Idea , innovation ,
                 vision and challenges in New Bangladesh.</h3>
             <button class="btn">Explore New Bangladesh</button>
@@ -34,22 +34,25 @@
                     <div class="singal-box">
                         <img src="img/card-icon.png" alt="">
                         <h6>Innovation</h6>
-                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                        <p>Innovation is the creation and implementation of new ideas, technologies, or methods to solve problems and improve efficiency, driving societal and economic progress.
+                        </p>
                     </div>
                     <div class="singal-box">
                         <img src="img/card-icon.png" alt="">
                         <h6>Sustainability</h6>
-                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                        <p>Sustainability ensures meeting present needs without compromising future generations, focusing on environmental, economic, and social well-being.
+                        </p>
                     </div>
                     <div class="singal-box">
                         <img src="img/card-icon.png" alt="">
                         <h6>Infrastructure</h6>
-                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                        <p>Infrastructure includes the essential physical and digital systems like roads, bridges, and networks that support economic activities and improve quality of life.
+                        </p>
                     </div>
                     <div class="singal-box">
                         <img src="img/card-icon.png" alt="">
                         <h6>Empowerment</h6>
-                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                        <p>Empowerment enables individuals or communities to gain control over their lives, fostering confidence, equality, and opportunities for growth.</p>
                     </div>
             </div>
         </section>
